# rlflow

./: .gitignore  EXPERIMENTS.md  README.md  SPACES.md  TASO_02_run_memorysafe.patch  TASO_03_get_costs.patch  pip.freeze  setup.py
chart_data/worldmodel_agent_reward/: BERT_20210510-005718_episode-reward.json  InceptionV3_20210510-012624_episode-reward.json  resnet18_20210510-171230_episode-reward.json  resnet50_20210510-172035_episode-reward.json  squeezenet1_20210510-165416_episode-reward.json
chart_data/worldmodel_loss/: BERT_20210422-194109_train-loss.json  InceptionV3_20210505-232848_train-loss.json  resnet18_20210506-011224_train-loss.json  resnet50_20210506-164900_train-loss.json  squeezenet1_20210505-222250_train-loss.json
notebooks/: plotting.ipynb
plots/: baseline_runtimes.eps  mb_ctrl_training_reward.eps  mb_training_loss.eps  mf_reward_func.eps  mf_training_reward.eps  optimisation_time.eps  runtimes_all.eps  runtimes_all_h.eps  runtimes_baseline.eps  runtimes_baseline_h.eps  runtimes_mb.eps  runtimes_mf.eps  runtimes_mf_h.eps  taso_graph_search.eps  xfer_heatmap.eps
scripts/: create_nasbench.py  create_nasbench_graphs.py
taso_ext/: CMakeLists.txt
taso_ext/src/: graph_feedback.cc  graph_feedback.h
xflowrl/: export_model_mb.py  test_env_step_time.py  test_mb_ctrl_temperature.py  test_mb_reward_pred.py  test_tensorrt_inf.py  tf_profile_onnx.py  train_mb_agent.py  train_mb_mdrnn.py
xflowrl/_cython/: CExt.pxd  core.pyx
xflowrl/agents/: agent.py  hierarchical_agent.py  mb_agent.py  models.py  utils.py
xflowrl/analysis/: complexity.py  taso.py  (+1 more)
(+33 files in other folders)
